<resources>
    <string name="app_name">Practice_Ground</string>
    <string name="PBP">버튼 연습</string>
    <string name="P_layout">레이아웃 연습</string>
    <string name="btnopen">에딧텍스트 열기</string>
    <string name="btntoast">토스트 메세지 출력</string>
    <string name="edit001">https://www.naver.com</string>
    <string name="showedittoast">에딧텍스트 출력</string>
    <string name="openediturl">에딧텍스트 주소 열기</string>
    <string name="btnclose">에딧텍스트 닫기</string>
    <string name="btnnew">새 버튼 추가하기</string>
    <string name="spinsize">회전 연습</string>
    <string name="choosegender">성별 선택</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="practice_widget">위젯 연습</string>
</resources>