<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false">
    <!--ctrl + alt + L = 코드정렬-->

    <!--레이아웃을 2개로 나눔으로써 양방향으로 버튼을 정리함-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/move001"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/PBP" /> <!-- Practice Button Place -->

        <Button
            android:id="@+id/move002"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="버튼 돌리기, 감추기" />

        <Button
            android:id="@+id/move003"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="4-2장" />

        <Button
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/move004"
            android:text="계산기" />


    </LinearLayout>

    <!--레이아웃을 2개로 나눔으로써 양방향으로 버튼을 정리함-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/move101"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/P_layout" />

        <Button
            android:id="@+id/move102"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/spinsize" />

        <Button
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/move103"
            android:text="텍스트"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:text="@string/practice_widget"
            android:id="@+id/move104"/>

    </LinearLayout>


</LinearLayout>
